<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.frags.CreateUserFrag">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/design_stroke_bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="120dp"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">

                <EditText
                    android:id="@+id/firstSignUpFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:background="@drawable/design_stroke_teal"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColorHint="@color/grey" />

                <EditText
                    android:id="@+id/lastSignUpFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="no"
                    android:background="@drawable/design_stroke_teal"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColorHint="@color/grey" />

                <EditText
                    android:id="@+id/mailSignUpFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="no"
                    android:background="@drawable/design_stroke_teal"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColorHint="@color/grey" />

                <EditText
                    android:id="@+id/passSignUpFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="no"
                    android:background="@drawable/design_stroke_teal"
                    android:hint="@string/____________"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColorHint="@color/grey" />


                <TextView
                    android:id="@+id/nextSignUpFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:background="@color/teal_200"
                    android:paddingHorizontal="36dp"
                    android:paddingVertical="12dp"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/pbSignUpFrag"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="12dp"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"/>


            </LinearLayout>

        </ScrollView>



    </RelativeLayout>

</layout>