<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.frags.LoginFrag">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/design_stroke_bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="220dp"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">


                <EditText
                    android:id="@+id/mailLoginFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="no"
                    android:background="@drawable/design_stroke_teal"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColorHint="@color/grey" />

                <EditText
                    android:id="@+id/passwordLoginFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="no"
                    android:background="@drawable/design_stroke_teal"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColorHint="@color/grey" />


                <TextView
                    android:id="@+id/nextLoginFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:background="@color/green"
                    android:paddingHorizontal="66dp"
                    android:paddingVertical="12dp"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/createAccountLoginFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textColor="@color/black"
                    android:padding="26dp"/>

                <ProgressBar
                    android:id="@+id/pbLoginFrag"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="12dp"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"/>


            </LinearLayout>

        </ScrollView>



    </RelativeLayout>

</layout>