<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.frags.PostTweetFrag">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/design_stroke_bottom"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_tweet"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toTopOf="@+id/postNewTweetFrag"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <EditText
                android:id="@+id/msgNewTweetFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="12dp"
                android:autofillHints="no"
                android:background="@drawable/design_stroke_teal_corner"
                android:gravity="start"
                android:hint="@string/add_tweet"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:minLines="6"
                android:padding="8dp"
                android:textColorHint="#00838F" />

        </RelativeLayout>


        <TextView
            android:id="@+id/postNewTweetFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:background="@color/green"
            android:paddingHorizontal="66dp"
            android:paddingVertical="12dp"
            android:text="@string/post"
            android:textColor="#546E7A"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>